# archetect-modeler

./: Cargo.toml
crates/archetect-model-mermaid/: Cargo.toml
crates/archetect-model-mermaid/src/: diagram.rs  er_diagram.rs  errors.rs  lib.rs
crates/archetect-modeler/: Cargo.toml
crates/archetect-modeler/src/: lib.rs  model.rs
crates/archetect-modeler/src/conversion/: mermaid.rs  mod.rs
